[package]
name = "erad"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/bend-n/erad"
keywords = ["cli"]
categories = ["development-tools"]
license = "MIT"
description = "read a file, print the bytes"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
comat = "0.1.3"
